[package]
name = "longan-nano-simple-shader"
version = "0.1.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
edition = "2018"

[dependencies]
gd32vf103xx-hal = "0.4.0"
embedded-hal = "0.2.3"
longan-nano = {version = "*", features = ["lcd"]}
nb = "0.1.2"
riscv = "0.6.0"
st7735-lcd = "0.7"
optimath = { git = "https://github.com/barafael/optimath.git"}
micromath = "*"
riscv-rt = "0.8.0"
panic-halt = "0.2.0"
embedded-graphics = "0.6"

